--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -5,6 +5,7 @@
 
 body {
   padding-top: 60px;
+  background-image: image-url('top.jpg');
 }
 
 section {
@@ -20,9 +21,18 @@ textarea {
 }
 
 .center h1 {
-  margin-bottom: 10px;
+  margin-top: 100px;
+  margin-bottom: 50px;
+}
+.top-logo {
+  color: #00f;
+  font-size: 4.5em;
+  font-weight: bold;
 }
 
+.navbar {
+  background-color: rgba(0,0,9,0.75);
+}
 /* typography */
 
 h1, h2, h3, h4, h5, h6 {
