--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -1,11 +1,11 @@
 <% provide(:title, "Top") %>
-<div class="center jumbotron">
-  <h1>勤怠システム</h1>
+<div class="center">
+  <h1 class="top-logo">個性が分かる心理テスト<br>JCITA - BASIC</h1>
   <!-- ログイン状態時はログインボタン無効にする -->
   <% if logged_in? %>
     <%= link_to "ログイン状態です", '#', class: "btn btn-lg btn-primary disabled", disabled: true %>
   <% else %>
-    <%= link_to "ログイン", login_path, class: "btn btn-lg btn-primary" %>
+    <%= link_to "Login", login_path, class: "btn btn-lg btn-info" %>
   <% end %>
 
   <% if !logged_in? || admin_user? %>
