--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -24,15 +24,73 @@ textarea {
   margin-top: 100px;
   margin-bottom: 50px;
 }
+
+/* トップページ表題 */
 .top-logo {
   color: #00f;
   font-size: 4.5em;
   font-weight: bold;
 }
 
+/* ヘッダーナビゲーションバー */
 .navbar {
   background-color: rgba(0,0,9,0.75);
 }
+
+/* タイトル画面のボタン */
+#start_button {
+	display: block;
+	text-align: center;
+	text-decoration: none;
+	color: #FF5722;
+	width: 120px;
+	height: 120px;
+	line-height: 100px;
+	border: double 4px #FF5722;
+	border-radius: 50%;
+	vertical-align: middle;
+	overflow: hidden;
+	transition: .6s;
+	font-size: 20px;
+	background-color: #fff;
+	outline:none;
+}
+#start_button:hover {
+	transform: rotateY(360deg);
+}
+
+/* [診断する]ボタン */
+#submit_button {
+     font-size: 14pt;
+     display:block;
+     width: 250px;
+     height:70px;
+     line-height: 70px;
+     color: #FFF;
+     text-decoration: none;
+     text-align: center;
+     background-color: #f39800; /*ボタン色*/
+     border-radius: 5px; /*角丸*/
+     -webkit-transition: all 0.5s;
+     transition: all 0.5s;
+}
+#submit_button:hover{
+     background-color: #f9c500; /*ボタン色*/
+}
+
+/* フッター */
+.footer{
+  height: 30px;
+  background-color: #000000;
+  position : absolute;
+  bottom: 0px;
+  width : 100%;
+  color: #ffffff;
+  text-align: center;
+  line-height: 30px;
+  font-size : 9pt;
+}
+
 /* typography */
 
 h1, h2, h3, h4, h5, h6 {
