--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -132,3 +132,30 @@ table.user-table tr td.basic_info_header {
   color:#ff0000;
   font-size: 0.9em;
 }
+
+#label {
+  font-size: 48px;
+  letter-spacing: .1em;
+  text-align: center;
+}
+#target {
+  font-size: 48px;
+  letter-spacing: .1em;
+  text-align: center;
+}
+#result {
+  font-size: 48px;
+  letter-spacing: .1em;
+  text-align: center;
+}
+.typing {
+  color: #ffffff;
+  width: 100%;
+  text-align: center;
+  background-image: image-url('kokuban3.png');
+  background-size: cover;
+  
+}
+#backtype {
+  text-align: center;
+}
