--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,28 +1,26 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-    <%= link_to "JCITA - BASIC", root_path, id: "logo" %>
+    <%= link_to "Typing Practice", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Top", root_path %></li>
         <% if logged_in? %>
           <% if admin_user? %>
             <li><%= link_to "ユーザー一覧", users_path %></li>
-            <li><%= link_to "出勤社員一覧", attendance_at_work_users_path %></li>
-            <li><%= link_to "拠点情報の修正", bases_path %></li>
-            <li><%= link_to "基本情報の修正", edit_basic_info_user_path(current_user) %></li>
+
           <% end %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              Account <b class="caret"></b>
+              Menu <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
               <% unless admin_user? %>
-                <li><%= link_to "診断結果", current_user %></li>
+                <li><%= link_to "タイピング練習", current_user %></li>
               <% end %>
-              <li><%= link_to "アカウント情報", edit_user_path(current_user) %></li>
+              <li><%= link_to "ランキング", edit_user_path(current_user) %></li>
               <li class="divider"></li>
               <li>
-                <%= link_to "Logout", logout_path, method: :delete %>
+                <%= link_to "ログアウト", logout_path, method: :delete %>
               </li>
             </ul>
           </li>
