--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,9 +1,8 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-    <%= link_to "Typing Practice", root_path, id: "logo" %>
+    <%= link_to "猫でも出来る🐈‍⬛タイピング練習", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Top", root_path %></li>
         <% if logged_in? %>
           <% if admin_user? %>
             <li><%= link_to "ユーザー一覧", users_path %></li>
@@ -11,13 +10,15 @@
           <% end %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              Menu <b class="caret"></b>
+              メニュー <b class="caret"></b>
             </a>
             <ul class="dropdown-menu">
               <% unless admin_user? %>
-                <li><%= link_to "タイピング練習", current_user %></li>
+                <li><%= link_to "モード選択", current_user %></li>
+                <li><%= link_to "マイスコア", ranking_user_path(current_user) %></li>
+                <li><%= link_to "アカウント", edit_user_path(current_user) %></li>
               <% end %>
-              <li><%= link_to "ランキング", edit_user_path(current_user) %></li>
+              
               <li class="divider"></li>
               <li>
                 <%= link_to "ログアウト", logout_path, method: :delete %>
@@ -25,7 +26,7 @@
             </ul>
           </li>
         <% else %>
-          <li><%= link_to "Login", login_path %></li>
+          <li><%= link_to "ログイン", login_path %></li>
         <% end %>
       </ul>
     </nav>
