--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -13,19 +13,18 @@
       <%= link_to "ログイン状態です", '#', class: "btn btn-lg btn-primary disabled", disabled: true %>
     <% else %>
       <%= link_to "ログイン", login_path, class: "btn btn-lg btn-info" %>
+      　<%= link_to "LINEでログイン", line_login_api_login_path, class: "btn btn-lg btn-success" %>
+
+      <!-- <form class="button_to" method="post" action="/lineusers/auth/line">
+      <input data-turbo="false" type="submit" value="Sign in with Line">
+      <input type="hidden" name="authenticity_token" value="L1AGg0f9fHZ2gzKafIEV0nCcLA+ys7kA4aqPnOUf0+l2HV82aFCKlEMoarn/q2bPAd6InS46Bii9ZRJ3d/O8CQ==">
+      </form> -->
     <% end %>
 
     <% if !logged_in? || admin_user? %>
       <p>アカウント作成は<%= link_to "こちら", signup_path %>から</p>
     <% end %>
 
-    <br/>
-    <form class="button_to" method="post" action="/lineusers/auth/line">
-      <input data-turbo="false" type="submit" value="Sign in with Line">
-      <input type="hidden" name="authenticity_token" value="L1AGg0f9fHZ2gzKafIEV0nCcLA+ys7kA4aqPnOUf0+l2HV82aFCKlEMoarn/q2bPAd6InS46Bii9ZRJ3d/O8CQ==">
-    </form>
-    
-    <%= link_to "LINEでログイン", line_login_api_login_path, class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium" %>
   </div>
      
 </div>
