typing word set

--- a/app/assets/javascripts/typecode.js.erb
+++ b/app/assets/javascripts/typecode.js.erb
@@ -9,9 +9,6 @@
     'ki-bo-do',
     'migikurikku',
     'dengennonn', 
-    // 'surottomasi-nn',
-    // 'yamanotesen',
-    // 'toukyoutonerimaku',
   ];
   const textsbase = [
     "猫",
@@ -25,16 +22,44 @@
 
   const wordsbase_h = [
     "huri-ennginianinaru",
+    "RubyOnRailshahure-muwa-kudesu",
+    "puroguraminngugakusyuuwosusumeru",
+    "ro-karukannkyounosakuseihatoraburugaooi",
+    "Javascriptwotukattemiru",
+    "CSSdemoziirowokaeru",
+    "HTMLwokakunohatanosii",
+    "MacOSdekaihatusuru",
   ];
   const textsbase_h = [
-    'フリーエンジニアになる',    
+    "フリーエンジニアになる",
+    "RubyOnRailsはフレームワークです",
+    "プログラミング学習を進める",
+    "ローカル環境の作成はトラブルが多い",
+    "Javascriptを使ってみる",
+    "CSSで文字色を変える",
+    "HTMLを書くのは楽しい",
+    "MacOSで開発する",
   ];
 
   const wordsbase_c = [
-    "nekohunzyatta",
+    "nya-",
+    "gorogoro",
+    "sya-!",
+    "unya-o-",
+    "nya-nn,nya-nn",
+    "gyaxtu",
+    "nyaxtu",
+    "kakkakkaxtu",
   ];
   const textsbase_c = [
-    '猫踏んじゃった',
+    "にゃー",
+    "ゴロゴロ",
+    "シャー！",
+    "ウニャーオー",
+    "ニャーン、ニャーン",
+    "ギャッ",
+    "ニャッ",
+    "カッカッカッ",
   ];
 
   let words;
