--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,6 @@
 <% provide(:title, @user.name) %>
 <div>
-  <h3>🐈‍⬛<%= @user.name %> さん🐈‍⬛</h3>
-  
-  <h2>モード選択</h2>
+  <br/><h2>モード選択</h2>
   <div class="center">
     🐈‍⬛　好きな猫を選んでね　🐈‍⬛
   </div>
