--- a/app/views/users/ranking.html.erb
+++ b/app/views/users/ranking.html.erb
@@ -1,9 +1,9 @@
 <% provide(:title, "Ranking") %>
 <% provide(:class_text, 'user--ranking') %>
-<h1>マイスコア</h1>
-<h2>🐈‍⬛ <%= @user.name %>さんの記録 🐈‍⬛</h2>
+<br/><h2>マイスコア</h2>
 
-<h3>🐈‍⬛ EASYモード</h3>
+<h3>🐈‍⬛ <%= @user.name %>さんの記録 🐈‍⬛</h3>
+<h3>🔸EASYモード</h3>
 <table class="table table-bordered table-condensed table-hover" id="ranking-table">
   <tbody>
     <tr>
@@ -33,7 +33,7 @@
   </tbody>
 </table>
 
-<h3>🐈‍⬛ HARDモード</h3>
+<h3>🔸HARDモード</h3>
 <table class="table table-bordered table-condensed table-hover" id="ranking-table">
   <tbody>
     <tr>
@@ -63,7 +63,7 @@
   </tbody>
 </table>
 
-<h3>🐈‍⬛ CATモード</h3>
+<h3>🔸CATモード</h3>
 <table class="table table-bordered table-condensed table-hover" id="ranking-table">
   <tbody>
     <tr>
